fix alert z-index

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -5,7 +5,7 @@ table td>form {
 }
 
 #alert {
-    z-index: 0;
+    z-index: -1;
     margin-left: 0 !important;
     width: 170px;
 }
